k8s/06-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: beginner-api
  namespace: beginner-lab
spec:
  ingressClassName: nginx
  rules:
    - host: beginner.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: beginner-api
                port:
                  number: 80
